fix css links and add album covers to music page

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,3 +41,8 @@ h2 {
     color: #fefefe;
     text-shadow: 0 4px 8px #000000;
 }
+
+.albumContainer {
+    display: flex;
+    justify-content: space-around;
+}
